change from CSE M.tech to M.tech CSE

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
   <img src="images/croped profile.png" alt="Rahul Profile Picture" height="200" width="200">
   <h1> Rahul Kumar </h1>
-  <p><em> Student CSE M.tech first year</em></p>
+  <p><em> Student M.tech CSE first year</em></p>
   <p>I am pursuing M.tech in Computer science and engineering from <strong>IIT Madras.</strong></p>
   <hr size="3" noshade>
 
